# podcast-site

./: .gitignore  .gitmodules  .matched_episodes.json  10.md  README.md  buffer_convert.py  build.sh  command  config.toml  deploy.sh  episode_parser.py  episode_server.py  extract_meta.py  fb.py  fix_notes.py  new_episode.py  pending-episodes.py  pyproject.toml  requirements.txt  run.sh  shorts.py  to_youtube.py  update_spotify_ids.py  upload.py  youtube.py  youtube_footer  youtube_test.py
.claude/commands/: new-episode.md
ads/: ASfile.scpt  Generate Trailer.jsx  automate.jsx  build_all.sh  render_ad.py
ads/assets/: 1.txt  21.txt  3.txt  5a.txt  5b.txt  60.txt  61.txt  62.txt  63.txt  64.txt  65a.txt  65b.txt  66.txt  67.txt  68.txt  69a.txt  69b.txt  7.txt  70.txt  70a.txt  70b.txt  71.txt  72a.txt  72b.txt  73.txt  74.txt  75.txt  77.txt  78.txt  81.txt
archetypes/: episode.md
content/: about.md  gdpr.md  linbasta.md
content/episode/: 1.md  10.md  100.md  101.md  102.md  103.md  104.md  105.md  106.md  107.md  108.md  109.md  11.md  110.md  111.md  112.md  113.md  114.md  115.md  116.md  117.md  118.md  119.md  12.md  120.md  121.md  122.md  123.md  124.md  125.md  126.md  127.md  128.md  129.md  13.md  130.md  131.md  132.md  133.md  134.md  (+145 more)
i18n/: sv.yaml
layouts/: index.html
layouts/episode/: list.html  single.html  summary.html
layouts/partials/: header.html  libsyn.html  podcast.html  preview.html  spotify_player.html
layouts/shortcodes/: caption.html  (+1 more)
spotify-podcast-extension/: README.md  content.js  manifest.json  popup.html  popup.js
(+5 files in other folders)
